--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,13 @@
     <string name="action_search">Type a name here!</string>
     <string name="search_hint">Search names</string>
     <string name="action_settings">Settings</string>
+    <string name="player_no_name">No name played</string>
+    <string name="player_no_name_sub">Here goes a symphony</string>
+    <string-array name="shyphonies">
+        <item>No1. The Symphony of ...</item>
+        <item>No2. The Laugh virus</item>
+        <item>No3. The third one</item>
+        <item>Happy Birthday</item>
+    </string-array>
 
 </resources>
